gccida/g2/dump_sbitmap
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_sbitmap/src/sbitmap.c:1053:17: error: use of undeclared identifier 'off_646752'
fprintf( file, &off_646752[1], ( bmap->elms[v6] >> v7) & 1); 
                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_sbitmap/src/obj/sbitmap.o] Error 1
